--- a/spiderfoot/static/css/spiderfoot.css
+++ b/spiderfoot/static/css/spiderfoot.css
@@ -2,25 +2,21 @@ body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
-.navbar-brand {
-  image-rendering: -o-crisp-edges; /* Opera */
-  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
-  image-rendering: crisp-edges;
-  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
-  margin-top: -10px;
+/* Higher specificity than Bootstrap's .navbar-brand, which loads after this
+   file and would otherwise win. Flex-centre the wordmark in the 50px navbar. */
+.navbar-brand.brand-wordmark {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-size: 25px;
+  font-weight: 600;
+  letter-spacing: -0.5px;
 }
 
-.brand-logo {
-  display: block;
-  float: left;
-  padding-top: 5px;
-  padding-right: 20px;
-}
-
-.spiderfoot-header-image {
-  height: 35px;
-  padding-top: 5px;
-  image-rendering: auto;
+.brand-wordmark .brand-accent {
+  color: #d9534f;
 }
 
 table {
@@ -221,10 +217,6 @@ input[type="checkbox"] {
   height: 14px;
   margin: 0px;
   display: inline;
-}
-
-.dark {
-  display: none;
 }
 
 /* THEME TOGGLER PROPERTIES */
